certmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: certmanager-app-ingress
spec:
  tls:
    - hosts:
        - yourdomain.com
      secretName: certmanager-app-tls
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: certmanager-app-service
                port:
                  number: 80
